--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "description": "React render com Express",
   "main": "index.js",
   "author": "Caio Fuzatto <caiofuzattom@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
