--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
   "main": "index.js",
   "author": "Caio Fuzatto <caiofuzattom@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "npx ts-node index.ts"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.6.2",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "typescript": "^5.2.2"
   }
 }
