--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Caio Fuzatto <caiofuzattom@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "npx ts-node index.ts"
+    "dev": "webpack && concurrently \"webpack --watch\" \"nodemon dist\""
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,6 +18,11 @@
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "typescript": "^5.2.2"
+    "concurrently": "^8.2.1",
+    "nodemon": "^3.0.1",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
